plugins {
    id 'fabric-loom' version '1.7-SNAPSHOT'
    id 'org.jetbrains.kotlin.jvm'
}

java {
}

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
    maven {
        name = 'Fabric'
        url = 'https://maven.fabricmc.net/'
    }
    mavenCentral()
    gradlePluginPortal()
    maven {
        name = 'Meteor Dev Releases'
        url = 'https://maven.meteordev.org/releases'
    }
    maven {
        name = 'Meteor Dev Snapshots'
        url = 'https://maven.meteordev.org/snapshots'
    }
}

dependencies {
    // Fabric
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    // Meteor
    modImplementation "meteordevelopment:meteor-client:${project.meteor_version}"
    // Kotlin for no reason at all :)
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

processResources {
    filesMatching('fabric.mod.json') {
        expand 'version': project.version, 'mc_version': project.minecraft_version
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
kotlin {
    jvmToolchain(21)
}